PROJECT(OpenVIZ_APPS)

SET(OpenVIZCORE_BUNDLED TRUE)

SET(OpenVIZ_APPLICATION_DIR ${PROJECT_SOURCE_DIR})

find_package(OsgEarth 2.9 REQUIRED osgEarthFeatures osgEarthUtil osgEarthSymbology osgEarthAnnotation)

INCLUDE_DIRECTORIES(
		${QT_INCLUDE_DIR} 
		${QT_QTCORE_INCLUDE_DIR}
		${QT_QTGUI_INCLUDE_DIR}
		${OSG_INCLUDE_DIR}
		${OSGEARTH_INCLUDE_DIRS}
    ${OSGEARTH_INCLUDE_DIR}
    ${GDAL_INCLUDE_DIR}
	)

SET(TARGET_DEFAULT_PREFIX "application_")
SET(TARGET_DEFAULT_LABEL_PREFIX "Applications")
SET(TARGET_COMMON_LIBRARIES 
        DC
		DCGui
		DCScene
		Manager
		DCDB
		${OSGEARTH_LIBRARY}
	  ${OSGEARTHANNOTATION_LIBRARY}
	  ${OSGEARTHFEATURES_LIBRARY}
	  ${OSGEARTHUTIL_LIBRARY}
	  ${OSGEARTHSYMBOLOGY_LIBRARY}
	  ${OSGSSIM_LIBRARY}
	  ${GDAL_LIBRARY}
	  
)



ADD_SUBDIRECTORY(OpenVizViewer)
ADD_SUBDIRECTORY(OpenVizEarth)
